syntax/tests/parsing/errors/expressions/if.res
// missing brace below
if (match)
  let a = 1
  a + 1
}
